--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.0.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
     implementation files('libs/picasso-2.5.2.jar')
+    //Glide library for image fetching from the web
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'com.makeramen:roundedimageview:2.3.0'
     implementation 'com.balysv:material-ripple:1.0.2'
     implementation 'com.karumi:dexter:4.2.0'
