--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.outlet.OutletListActivity"/>
         <activity android:name=".ui.addoutlet.AddOutletActivity"/>
     </application>
 
