--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,13 +20,15 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
+        </activity>
+        <activity android:name=".ui.outlet.OutletListActivity"/>
+        <activity android:name=".ui.addoutlet.AddOutletActivity"/>
+        <activity android:name=".ui.login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.outlet.OutletListActivity"/>
-        <activity android:name=".ui.addoutlet.AddOutletActivity"/>
     </application>
 
 </manifest>
