--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,5 +64,10 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.github.smarteist:autoimageslider:1.3.2-appcompat'
     compileOnly 'com.google.android.wearable:wearable:2.5.0'
+    implementation 'com.daimajia.slider:library:1.1.5@aar'
+
+    //State Progress Bar
+    implementation 'com.kofigyan.stateprogressbar:stateprogressbar:1.0.0'
+    implementation 'hyogeun.github.com.colorratingbar:ColorRatingBar:1.0.1'
 
 }
