--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,6 @@ dependencies {
     implementation 'com.kofigyan.stateprogressbar:stateprogressbar:1.0.0'
     implementation 'hyogeun.github.com.colorratingbar:ColorRatingBar:1.0.1'
 
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
+
 }
