--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -71,5 +74,6 @@ dependencies {
     implementation 'hyogeun.github.com.colorratingbar:ColorRatingBar:1.0.1'
 
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
+    implementation "com.android.databinding:compiler:3.0.1"
 
 }
