--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,26 +12,28 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/app_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/app_logo"
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
         android:requestLegacyExternalStorage="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".ui.login.LoginActivity">
+        <activity android:name=".ui.spalsh.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.spalsh.SplashScreenActivity"/>
+        <activity android:name=".ui.login.LoginActivity"/>
         <activity android:name=".ui.dashboard.DashboardActivity"/>
         <activity android:name=".MainActivity"/>
-        <activity android:name=".ui.manageproduct.ProductCategoryActivity"/>
+        <activity android:name=".ui.manageproduct.productcategorylist.ProductCategoryActivity"/>
         <activity android:name=".ui.addoutlet.AddOutletActivity"/>
         <activity android:name=".ui.outlet.OutletListActivity"/>
         <activity android:name=".ui.manageproduct.addproductcategory.AddProductCategoryActivity"/>
+        <activity android:name=".ui.manageproduct.addproductbrand.AddProductBrandActivity"/>
+        <activity android:name=".ui.manageproduct.productbrandlist.ProductBrandListActivity"/>
         <activity android:name=".ui.outlet.outletdetails.OutletDetailsActivity"/>
 
         <provider
