--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
         <activity android:name=".ui.manageproduct.productlist.ProductListActivity"/>
         <activity android:name=".ui.outlet.outletdetails.OutletDetailsActivity"/>
         <activity android:name=".ui.manageproduct.addproduct.AddProductsActivity"/>
+        <activity android:name=".ui.manageorder.CartActivity"/>
 
         <provider
             android:name="androidx.core.content.FileProvider"
