--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,9 @@
         <activity android:name=".ui.manageproduct.productlist.ProductListActivity"/>
         <activity android:name=".ui.outlet.outletdetails.OutletDetailsActivity"/>
         <activity android:name=".ui.manageproduct.addproduct.AddProductsActivity"/>
-        <activity android:name=".ui.manageorder.CartActivity"/>
+        <activity android:name=".ui.manageorder.cart.CartActivity"/>
+        <activity android:name=".ui.manageorder.pastorderheader.PastOrderHeaderActivity"/>
+        <activity android:name=".ui.manageorder.pastorderdproductdetails.PastOrderedProductDetailsActivity"/>
 
         <provider
             android:name="androidx.core.content.FileProvider"
