--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,8 @@
         <activity android:name=".ui.manageorder.cart.CartActivity"/>
         <activity android:name=".ui.manageorder.pastorderheader.PastOrderHeaderActivity"/>
         <activity android:name=".ui.manageorder.pastorderdproductdetails.PastOrderedProductDetailsActivity"/>
+        <activity android:name=".ui.manageproduct.addblockbrand.AddBlockBrandActivity"/>
+        <activity android:name="com.atozcorporation.atoz.ui.manageproduct.blockedbrandlist.BlockedBrandListActivity"/>
 
         <provider
             android:name="androidx.core.content.FileProvider"
